Changed main class slightly and pointed pom.xml to the right main class

--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,30 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
+  
+  <build>
+    <directory>build</directory>
+    <outputDirectory>build/classes</outputDirectory>
+
+    <plugins>
+      <!-- This will add a classpath and define the main class, it will be runnable with 'java -jar' -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifest>
+              <addClasspath>true</addClasspath>
+              <mainClass>nl.joshuaslik.UFMReckoning.App</mainClass>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
   <dependencies>
+    <!-- The test classes are of course dependant on junit -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
