--- a/pom.xml
+++ b/pom.xml
@@ -33,13 +33,25 @@
         </configuration>
       </plugin>
     
-    <!-- Make sure that Java 1.8 is used (Java 8) -->
+      <!-- Make sure that Java 1.8 is used (Java 8) -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <configuration>
             <source>1.8</source>
             <target>1.8</target>
+        </configuration>
+      </plugin>
+      
+      <!-- Generate Javadoc with private classes and methods 
+           For internal use only -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.1</version>
+        <configuration>
+          <show>private</show>
+          <nohelp>true</nohelp>
         </configuration>
       </plugin>
     </plugins>
@@ -54,4 +66,20 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
+  <reporting>
+    <plugins>
+      <!-- Generate Javadoc with public classes and methods 
+           For public use -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.1</version>
+        <configuration>
+          <stylesheetfile>${basedir}/src/main/javadoc/stylesheet.css</stylesheetfile>
+          <show>public</show>
+        </configuration>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
