Lots a bug squashing in Continuous Integration and code
[*] Added tests to the main class. Runnable as arguments
[*] Fixed Travis CI zipping folders to upload to GitHub which it shouldn't
[*] Fixed a nasty bug which caused the XML Parser to override previous set content
[*] Changed the XML Parser to be able to access resources inside the JAR file
[*] Removed debug prints
[~] Made the toString() method in XMLTag prettier

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ jdk:
 before_deploy:
   - mvn package
   - cd build
-  - zip -r UFM-Reckoning ./* -x ./maven-archiver\* ./maven-status\* ./classes\*  ./surefire-reports\* ./test-classes\*
+  - zip -r UFM-Reckoning ./* -x ./maven-archiver\* ./maven-status\* ./classes\*  ./surefire-reports\* ./test-classes\* ./generated-sources\* ./generated-test-sources\*
   - ls
   - cd ..
 
