--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,13 @@ language: java
 jdk:
   - oraclejdk8
 
+install:
+  - mvn install
+
 before_deploy:
   - mvn package
   - cd build
-  - zip -r UFM-Reckoning ./* -x ./maven-archiver\* ./maven-status\* ./classes\*  ./surefire-reports\* ./test-classes\* ./generated-sources\* ./generated-test-sources\*
+  - zip -r UFM-Reckoning ./* -x ./maven-archiver\* ./maven-status\* ./classes\* ./surefire-reports\* ./test-classes\* ./generated-sources\* ./generated-test-sources\*
   - ls
   - cd ..
 
