--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: java
 jdk:
   - oraclejdk8
 
+before_install:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+
 install:
-  - mvn install
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 
 before_deploy:
   - mvn package
