--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ jdk:
   - oraclejdk8
 
 before_install:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn install -DskipTests=false -B -V
 
 install:
-  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn install -DskipTests=false -B -V
 
 before_deploy:
   - mvn package
