--- a/pom.xml
+++ b/pom.xml
@@ -65,11 +65,11 @@
                     <check>
                         <branchRate>85</branchRate>
                         <lineRate>85</lineRate>
-                        <haltOnFailure>false</haltOnFailure>
-                        <totalBranchRate>85</totalBranchRate>
-                        <totalLineRate>85</totalLineRate>
-                        <packageLineRate>85</packageLineRate>
-                        <packageBranchRate>85</packageBranchRate>
+                        <haltOnFailure>true</haltOnFailure>
+                        <totalBranchRate>90</totalBranchRate>
+                        <totalLineRate>90</totalLineRate>
+                        <packageLineRate>90</packageLineRate>
+                        <packageBranchRate>90</packageBranchRate>
                         <regexes>
                             <regex>
                                 <pattern>com.example.reallyimportant.*</pattern>
